--- a/navi.css
+++ b/navi.css
@@ -100,6 +100,10 @@
 	background: #8C2A26;
 	color: #fff;
 }
+.jake-mega-menu li.spacer {
+    background: #8C2A26;
+    color: #fff;
+}
 .jake-mega-menu li:hover > div {
 	left: 0;
 	opacity: 1;
